syntax = "proto3";

package plfm.agent.v1;

// SecretsDelivery gRPC service for secret bundle coordination.
service SecretsDelivery {
  // Request secret bundle for an instance.
  rpc RequestSecretBundle(RequestSecretBundleRequest) returns (RequestSecretBundleResponse);
  // Acknowledge secret bundle delivery.
  rpc AcknowledgeDelivery(AcknowledgeDeliveryRequest) returns (AcknowledgeDeliveryResponse);
  // Rotate secrets for an instance.
  rpc RotateSecrets(RotateSecretsRequest) returns (RotateSecretsResponse);
  // Report secret delivery status.
  rpc ReportSecretStatus(ReportSecretStatusRequest) returns (ReportSecretStatusResponse);
}

// Secret delivery state.
enum SecretDeliveryState {
  // Unspecified delivery state.
  SECRET_DELIVERY_STATE_UNSPECIFIED = 0;
  // Secret bundle is pending delivery.
  SECRET_DELIVERY_STATE_PENDING = 1;
  // Secret bundle is being fetched.
  SECRET_DELIVERY_STATE_FETCHING = 2;
  // Secret bundle is delivered and mounted.
  SECRET_DELIVERY_STATE_DELIVERED = 3;
  // Secret bundle delivery failed.
  SECRET_DELIVERY_STATE_FAILED = 4;
  // Secret bundle is being rotated.
  SECRET_DELIVERY_STATE_ROTATING = 5;
}

// Request for secret bundle.
message RequestSecretBundleRequest {
  // Node identifier.
  string node_id = 1;
  // Instance identifier.
  string instance_id = 2;
  // Secret version identifier.
  string version_id = 3;
  // Mount path for secrets.
  string mount_path = 4;
  // File mode for secret files.
  optional int32 mode = 5;
  // User id for secret file ownership.
  optional int32 uid = 6;
  // Group id for secret file ownership.
  optional int32 gid = 7;
}

// Response with secret bundle.
message RequestSecretBundleResponse {
  // Whether bundle is available.
  bool available = 1;
  // Secret material when available.
  optional SecretBundle bundle = 2;
  // Error message if unavailable.
  optional string error = 3;
}

// Secret bundle containing multiple secrets.
message SecretBundle {
  // Bundle version identifier.
  string version_id = 1;
  // Secret entries in the bundle.
  repeated SecretEntry entries = 2;
  // Bundle hash for integrity verification.
  string bundle_hash = 3;
  // Expiration timestamp in seconds since epoch.
  optional int64 expires_at_secs = 4;
}

// Individual secret entry within a bundle.
message SecretEntry {
  // Secret key name.
  string key = 1;
  // Secret value.
  bytes value = 2;
  // Value hash for integrity verification.
  string value_hash = 3;
  // Content type hint.
  optional string content_type = 4;
}

// Request to acknowledge secret delivery.
message AcknowledgeDeliveryRequest {
  // Node identifier.
  string node_id = 1;
  // Instance identifier.
  string instance_id = 2;
  // Secret version identifier.
  string version_id = 3;
  // Bundle hash for verification.
  string bundle_hash = 4;
  // Whether delivery was successful.
  bool success = 5;
  // Error message if delivery failed.
  optional string error = 6;
}

// Response for delivery acknowledgment.
message AcknowledgeDeliveryResponse {
  // Whether acknowledgment was recorded.
  bool recorded = 1;
}

// Request to rotate secrets.
message RotateSecretsRequest {
  // Node identifier.
  string node_id = 1;
  // Instance identifier.
  string instance_id = 2;
  // Current version identifier.
  string current_version_id = 3;
  // New version identifier.
  string new_version_id = 4;
  // New secret bundle.
  SecretBundle new_bundle = 5;
  // Grace period before removing old secrets in seconds.
  optional int32 grace_period_secs = 6;
}

// Response for secret rotation.
message RotateSecretsResponse {
  // Whether rotation was initiated.
  bool initiated = 1;
  // Error message if rotation failed.
  optional string error = 2;
}

// Secret status for an instance.
message SecretStatus {
  // Instance identifier.
  string instance_id = 1;
  // Current version identifier.
  optional string version_id = 2;
  // Delivery state.
  SecretDeliveryState state = 3;
  // Bundle hash if delivered.
  optional string bundle_hash = 4;
  // Delivery timestamp in seconds since epoch.
  optional int64 delivered_at_secs = 5;
  // Error message if in failed state.
  optional string error = 6;
}

// Request to report secret status.
message ReportSecretStatusRequest {
  // Node identifier.
  string node_id = 1;
  // Secret statuses for instances.
  repeated SecretStatus statuses = 2;
  // Timestamp of status report in seconds since epoch.
  int64 timestamp_secs = 3;
}

// Response for secret status report.
message ReportSecretStatusResponse {
  // Whether report was accepted.
  bool accepted = 1;
}
